<resources>
    <string name="app_name">施工队长</string>

    <string name="str_owner_name">业主姓名：</string>
    <string name="str_project_manager">项目经理：</string>
    <string name="str_designer">设计师：</string>
    <string name="str_start_time">开工时间：</string>
    <string name="str_end_time">竣工时间：</string>
    <string name="str_site_address">工地地址：</string>
    <string name="str_msg_remind">消息</string>
    <string name="str_order_detail">订单明细</string>
    <string name="str_orders">下单</string>
    <string name="str_cancel">取消</string>

    <string name="str_pre_time">预计到货时间：</string>
    <string name="str_pra_time">实际到货时间：</string>
    <string name="str_confirm_recive">确认收货</string>
    <string name="str_returns">退货</string>
    <string name="str_orders_state">已下单</string>
    <string name="str_all">全部</string>
    <string name="str_all_orders">全部订单</string>
    <string name="str_orders_detail">订单明细</string>
    <string name="str_snhs">水泥黄沙</string>
    <string name="str_sg">水管</string>
    <string name="str_dx">电线</string>
    <string name="str_bc">板材</string>
    <string name="str_yqtl">油漆涂料</string>
    <string name="str_dls">大理石</string>
    <string name="str_wj">五金</string>
    <string name="str_qt">其他</string>

    <string name="str_test_data1">测试数据</string>
    <string name="str_test_data2">测试数据测试数据测试数据测试数据测试数据测试数据测</string>

    <string name="order_details_brand">品牌厂家:&#160;&#160;&#160;&#160;</string>
    <string name="order_details_type">材料类型:&#160;&#160;&#160;&#160;</string>
    <string name="order_details_moder">规格型号:&#160;&#160;&#160;&#160;</string>
    <string name="order_details_unit">单&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;位:&#160;&#160;&#160;&#160;</string>
    <string name="order_details_price">单&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;价:&#160;&#160;&#160;&#160;</string>
    <string name="order_details_number">数&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;量:&#160;&#160;&#160;&#160;</string>
    <string name="order_details_remark">备&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;注:&#160;&#160;&#160;&#160;</string>
    <string name="order_details_total_money">下单总金额:&#160;&#160;&#160;&#160;</string>
    <string name="order_details_delivery_time">送货时间:&#160;&#160;&#160;&#160;</string>
    <string name="order_count_price">总&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;价：</string>
    <string name="order_details_cancel">取消</string>
    <string name="order_details_confirm">确定</string>
    <string name="order_details_sofort">送货时间</string>
    <string name="order_search">请输入搜素的文字</string>
    <string name="order_construction_stage">使用阶段:&#160;&#160;&#160;&#160;</string>
    <string name="yjk_jianli">监&#160;&#160;&#160;&#160;&#160;&#160;&#160;理 ：</string>
</resources>
