<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/y30"
            android:background="@color/gray_f1f1f1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingTop="12dp"
            android:paddingBottom="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/tv_owner_name_invalid"
                    style="@style/tv_Gray959595_Szie32"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:paddingBottom="@dimen/y15"
                    android:paddingTop="@dimen/y10"
                    android:text="@string/str_owner_name"/>

                <TextView
                    android:id="@+id/tv_owner_name"
                    style="@style/tv_Black000000_Szie32"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/tv_owner_name_invalid"
                    android:paddingBottom="@dimen/y15"
                    android:paddingTop="@dimen/y10"
                    android:text="@string/str_test_data1"/>

                <ImageView
                    android:id="@+id/img_telphone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:padding="@dimen/x5"
                    android:src="@mipmap/phone"/>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_project_manager_invalid"
                        style="@style/tv_Gray959595_Szie32"
                        android:paddingBottom="@dimen/y15"
                        android:paddingTop="@dimen/y15"
                        android:text="@string/str_project_manager"/>

                    <TextView
                        android:id="@+id/tv_project_manager"
                        style="@style/tv_Black000000_Szie32"
                        android:paddingBottom="@dimen/y15"
                        android:paddingTop="@dimen/y15"
                        android:text="@string/str_test_data1"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_designer_invalid"
                        style="@style/tv_Gray959595_Szie32"
                        android:paddingBottom="@dimen/y15"
                        android:paddingTop="@dimen/y15"
                        android:text="@string/str_designer"/>

                    <TextView
                        android:id="@+id/tv_designer"
                        style="@style/tv_Black000000_Szie32"
                        android:paddingBottom="@dimen/y15"
                        android:paddingTop="@dimen/y15"
                        android:text="@string/str_test_data1"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    style="@style/tv_Gray959595_Szie32"
                    android:paddingBottom="@dimen/y15"
                    android:paddingTop="@dimen/y15"
                    android:text="下 单 员  ："/>

                <TextView
                    android:id="@+id/tv_muser"
                    style="@style/tv_Black000000_Szie32"
                    android:paddingBottom="@dimen/y15"
                    android:paddingTop="@dimen/y15"
                    android:text="张xx"/>

            </LinearLayout>

            <View
                style="@style/view_grayd1d1d1_divider"
                android:layout_marginBottom="@dimen/y15"
                android:layout_marginTop="@dimen/y15"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_start_time_invalid"
                    style="@style/tv_Gray959595_Szie32"
                    android:paddingBottom="@dimen/y15"
                    android:paddingTop="@dimen/y15"
                    android:text="@string/str_start_time"/>

                <TextView
                    android:id="@+id/tv_start_time"
                    style="@style/tv_Black000000_Szie32"
                    android:paddingBottom="@dimen/y15"
                    android:paddingTop="@dimen/y15"
                    android:text="@string/str_test_data1"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_end_time_invalid"
                    style="@style/tv_Gray959595_Szie32"
                    android:paddingBottom="@dimen/y15"
                    android:paddingTop="@dimen/y15"
                    android:text="@string/str_end_time"/>

                <TextView
                    android:id="@+id/tv_end_time"
                    style="@style/tv_Black000000_Szie32"
                    android:paddingBottom="@dimen/y15"
                    android:paddingTop="@dimen/y15"
                    android:text="@string/str_test_data1"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_build_address_invalid"
                    style="@style/tv_Gray959595_Szie32"
                    android:layout_gravity="top"
                    android:paddingBottom="@dimen/y15"
                    android:paddingTop="@dimen/y15"
                    android:text="@string/str_site_address"/>

                <TextView
                    android:id="@+id/tv_build_address"
                    style="@style/tv_Black000000_Szie32"
                    android:maxLines="2"
                    android:paddingBottom="@dimen/y15"
                    android:paddingTop="@dimen/y15"
                    android:text="@string/str_test_data2"/>
            </LinearLayout>

            <View
                style="@style/view_grayd1d1d1_divider"
                android:layout_marginBottom="@dimen/y5"
                android:layout_marginTop="@dimen/y15"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp">

                <LinearLayout
                    android:id="@+id/ll_taocan_type"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                    <ImageView
                        android:src="@mipmap/taocan"
                        android:layout_gravity="center_vertical"
                        android:layout_width="16dp"
                        android:layout_height="16dp"/>
                    <TextView
                        android:id="@+id/tv_taocan_type"
                        android:layout_marginLeft="5dp"
                        android:text="999套餐"
                        android:textColor="@color/fe0100"
                        android:textSize="16sp"
                        android:layout_gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_refuse"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/x60"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="@dimen/x20"
                        android:background="@drawable/selector_text_round_red"
                        android:gravity="center"
                        android:minWidth="60dp"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:text="拒单"
                        android:textColor="@color/text_red_fe1010"
                        android:textSize="@dimen/textsize_32px"/>

                    <TextView
                        android:id="@+id/tv_set_project"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/x60"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="@dimen/x20"
                        android:background="@drawable/selector_text_round_gary"
                        android:gravity="center"
                        android:minWidth="@dimen/x160"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:text="设置排期"
                        android:textColor="@drawable/selector_text_color_gary"
                        android:textSize="@dimen/textsize_32px"/>

                    <TextView
                        android:id="@+id/tv_build_record"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/x60"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="@dimen/x20"
                        android:background="@drawable/selector_text_round_gary"
                        android:gravity="center"
                        android:minWidth="@dimen/x160"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:text="施工记录"
                        android:textColor="@drawable/selector_text_color_gary"
                        android:textSize="@dimen/textsize_32px"/>

                    <FrameLayout
                        android:id="@+id/fl_msg"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/tv_msg_remind"
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/x60"
                            android:layout_gravity="center_vertical"
                            android:background="@drawable/selector_text_round_gary"
                            android:gravity="center"
                            android:minWidth="60dp"
                            android:paddingLeft="5dp"
                            android:paddingRight="5dp"
                            android:text="@string/str_msg_remind"
                            android:textColor="@drawable/selector_text_color_gary"
                            android:textSize="@dimen/textsize_32px"/>

                        <TextView
                            android:id="@+id/tv_msg_remind_count"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:background="@mipmap/warn"
                            android:gravity="center"
                            android:text="99"
                            android:textColor="@color/white"
                            android:textSize="@dimen/textsize_22px"/>
                    </FrameLayout>


                </LinearLayout>
            </RelativeLayout>

        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/img_builde_site_item_iscomplete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="@dimen/x30"
        android:layout_marginTop="@dimen/y130"
        android:src="@mipmap/ic_build_completework"/>

</RelativeLayout>
